--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -13,7 +13,7 @@ body {
 	color: @black;
 }
 
-p {
+p, span, div, td {
 	font-size: 18px;
 }
 
