--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -2,7 +2,7 @@
 	background: url('images/hero/coast_desktop.jpeg') no-repeat center;
 	background-size: 100%;
 	height: 59vw;
-	max-height: 70vh;
+	max-height: 75vh;
 	width: 100%;
 	display: flex;
 	background-position-y: 35%;
@@ -138,8 +138,7 @@
 }
 
 .aboutMeBulletsContainer {
-	padding: 1rem 1rem 1rem 4rem;
-	background-color: rgb(230, 230, 230);
+	background-color: #eeeeee;
 	font-size: 18px;
 
 	.aboutMeBullets {
