--- a/src/styles/navBar.less
+++ b/src/styles/navBar.less
@@ -14,17 +14,18 @@
 	.navbarTitle {
 		margin-left: 4rem;
 		overflow: hidden;
-
+		
+		& > * {
+			font-size: 2rem;
+		}
 		.name {
 			padding-right: 1rem;
 			margin-right: 1rem;
-			font-size: 2rem;
 			font-weight: 600;
 		}
 		.pageTitle {
 			display: none;
 			color: @clr-theme-secondary;
-			font-size: 2rem;
 			font-weight: 600;
 		}
 	}
@@ -96,8 +97,13 @@
 			background: @white;
 			box-shadow: -2px 3px 4px #7b7b7b;
 
+			a {
+				padding: 0.5rem 1rem;
+			}
+
 			.iconLinks {
-				padding-bottom: 1em;
+				padding-top: 0.5rem;
+				padding-bottom: 1rem;
 				display: block;
 			}
 		}
@@ -111,6 +117,10 @@
 	@media @medium-down {
 		.navbarTitle {
 			margin-left: 1rem;
+
+			& > * {
+				font-size: 1.8rem;
+			}
 		}
 	}
 
