--- a/src/styles/pageLayouts.less
+++ b/src/styles/pageLayouts.less
@@ -9,13 +9,20 @@
 	width: 100%;
  }
 
- .mainContentPadding {
-	padding: 1rem;
+.mainContentPadding {
+	padding: 1rem 2rem 1rem 4rem; // top, right, bottom, left
 
+	
+	@media @large-down {
+		padding: 1rem 2rem;
+	}
+	@media @medium-down {
+		padding: 1rem 1rem;
+	}
 	@media @small-down {
 		padding: 1rem 0.5rem;
 	}
- }
+}
 
 .scrollContainer {
 	overflow: auto;
